--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "hypernova",
-  "version": "2.5.0",
+  "name": "@skroutz/hypernova",
+  "version": "2.5.1",
   "description": "A service for server-side rendering your JavaScript views",
+  "private": false,
   "main": "lib/index.js",
   "scripts": {
     "prepublish": "not-in-publish || safe-publish-latest && npm run build",
@@ -21,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:airbnb/hypernova.git"
+    "url": "git@github.com:skroutz/hypernova.git"
   },
   "keywords": [
     "react",
@@ -42,9 +43,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/airbnb/hypernova/issues"
+    "url": "https://github.com/skroutz/hypernova/issues"
   },
-  "homepage": "https://github.com/airbnb/hypernova",
+  "homepage": "https://github.com/skroutz/hypernova",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-add-module-exports": "^0.2.1",
